test/trivial/bradc/entrypoint/twomains.good
<command line>: error: multiple 'main' procedures in module 'twomains'
twomains.chpl:4: note: found 'proc main' here
twomains.chpl:11: note: found 'proc main' here
