test/trivial/bradc/entrypoint/twomains.chpl
var x = 32;
var y = -1;

function main() {
  var y = 42;

  writeln("x is: ", x);
  writeln("y is: ", y);  
}

function main() {
  writeln("Should never get here");
}
